--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -5,9 +5,19 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+
 .overlay {
     @apply absolute w-full h-full bg-black opacity-35 pointer-events-none -z-10
 }
+
+.row {
+    @apply flex flex-wrap
+}
+
+.row > * {
+    @apply px-4
+}
+
 .social_networks {
     @apply relative flex items-center gap-4 text-white text-lg pr-5 after:content-[''] after:absolute after:w-[1px] after:h-full after:bg-white after:right-0
 }
@@ -20,10 +30,30 @@ body {
     @apply transition duration-500 ease-in-out hover:text-[#F58220]
 }
 
+.before_line {
+    @apply after:content-[''] after:absolute after:w-[2px] after:h-full after:bg-[#FFB805] after:top-0 after:left-0
+}
+
 .banner_glide .glide__slide {
     @apply relative flex items-center justify-center h-screen bg-[length:100%_100%] bg-center bg-no-repeat z-10
 }
 
 .btn_outline {
     @apply border border-white py-3 px-14 text-center max-w-2xl
+}
+
+.small_title {
+    @apply text-lg font-medium uppercase text-[#F58220]
+}
+
+.section_title {
+    @apply text-xl leading-8 font-semibold text-[#303030]
+}
+
+.bg_section {
+    @apply w-full h-64 flex items-center justify-center bg-[url(../images/backgrounds/bg-1.png)] bg-cover bg-center
+}
+
+.bg_section .overlay {
+    @apply bg-[#FFB805EB] opacity-85 z-0
 }
