--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -606,12 +606,42 @@ video {
   z-index: 10;
 }
 
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
 .block {
   display: block;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .flex {
   display: flex;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-3\/4 {
@@ -646,6 +676,10 @@ video {
   justify-content: flex-end;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
@@ -658,8 +692,29 @@ video {
   gap: 1.25rem;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-\[\#D8DBF6\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(216 219 246 / var(--tw-border-opacity));
 }
 
 .bg-\[\#1E1E1E\] {
@@ -667,9 +722,18 @@ video {
   background-color: rgb(30 30 30 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F0F3F6\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 243 246 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-4 {
@@ -685,6 +749,11 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .pb-3 {
@@ -711,17 +780,35 @@ video {
   padding-left: 1.25rem;
 }
 
+.pt-16 {
+  padding-top: 4rem;
+}
+
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-center {
   text-align: center;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-lg {
@@ -739,14 +826,9 @@ video {
   line-height: 1.75rem;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-light {
@@ -761,6 +843,10 @@ video {
   line-height: 1.75rem;
 }
 
+.leading-\[20px\] {
+  line-height: 20px;
+}
+
 .text-\[\#303030\] {
   --tw-text-opacity: 1;
   color: rgb(48 48 48 / var(--tw-text-opacity));
@@ -769,6 +855,24 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\#D8DbF6\] {
+  --tw-text-opacity: 1;
+  color: rgb(216 219 246 / var(--tw-text-opacity));
+}
+
+.text-\[\#\] {
+  color: #;
+}
+
+.text-\[\#\#F58220\] {
+  color: ##F58220;
+}
+
+.text-\[\#F58220\] {
+  --tw-text-opacity: 1;
+  color: rgb(245 130 32 / var(--tw-text-opacity));
 }
 
 .shadow-2xl {
@@ -903,12 +1007,41 @@ body {
   color: rgb(245 130 32 / var(--tw-text-opacity));
 }
 
+.small_title.after::after {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  height: 1.5px;
+  width: 7rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 184 5 / var(--tw-bg-opacity));
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+.small_title.black {
+  --tw-text-opacity: 1;
+  color: rgb(48 48 48 / var(--tw-text-opacity));
+}
+
 .section_title {
   font-size: 1.25rem;
   font-weight: 600;
   line-height: 2rem;
   --tw-text-opacity: 1;
   color: rgb(48 48 48 / var(--tw-text-opacity));
+}
+
+.section_title.after::after {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  height: 2px;
+  width: 2.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 130 32 / var(--tw-bg-opacity));
+  --tw-content: '';
+  content: var(--tw-content);
 }
 
 .bg_section {
@@ -926,6 +1059,27 @@ body {
   z-index: 0;
   background-color: #FFB805EB;
   opacity: 0.85;
+}
+
+.service_card {
+  min-height: 420px;
+  border-radius: 0.5rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(245 130 32 / var(--tw-border-opacity));
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 2rem;
+}
+
+.even\:mt-9:nth-child(even) {
+  margin-top: 2.25rem;
+}
+
+@media (min-width: 768px) {
+  .md\:even\:mt-9:nth-child(even) {
+    margin-top: 2.25rem;
+  }
 }
 
 @media (min-width: 1024px) {
