--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -594,6 +594,14 @@ video {
   position: relative;
 }
 
+.left-0 {
+  left: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
 .right-\[5px\] {
   right: 5px;
 }
@@ -628,12 +636,68 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
+.hidden {
+  display: none;
+}
+
 .h-10 {
   height: 2.5rem;
 }
 
 .h-20 {
   height: 5rem;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
+.h-\[350px\] {
+  height: 350px;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[3\] {
+  height: 3;
+}
+
+.h-\[320px\] {
+  height: 320px;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-\[280px\] {
+  height: 280px;
+}
+
+.h-\[210px\] {
+  height: 210px;
+}
+
+.\!h-\[210px\] {
+  height: 210px !important;
 }
 
 .w-10 {
@@ -652,16 +716,20 @@ video {
   width: 100%;
 }
 
-.min-w-\[80px\] {
-  min-width: 80px;
-}
-
-.max-w-\[100px\] {
-  max-width: 100px;
+.max-w-\[255px\] {
+  max-width: 255px;
 }
 
 .max-w-\[70px\] {
   max-width: 70px;
+}
+
+.max-w-\[2\] {
+  max-width: 2;
+}
+
+.max-w-\[255\] {
+  max-width: 255;
 }
 
 .flex-1 {
@@ -688,24 +756,20 @@ video {
   justify-content: space-around;
 }
 
-.gap-5 {
-  gap: 1.25rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
-}
-
 .gap-4 {
   gap: 1rem;
 }
 
-.rounded-full {
-  border-radius: 9999px;
+.gap-5 {
+  gap: 1.25rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .border {
@@ -722,23 +786,37 @@ video {
   background-color: rgb(30 30 30 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#2E2937\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(46 41 55 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#F0F3F6\] {
   --tw-bg-opacity: 1;
   background-color: rgb(240 243 246 / var(--tw-bg-opacity));
 }
 
-.bg-white {
+.bg-\[\#F3DABB\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(243 218 187 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F4EEE9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 238 233 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F58220\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 130 32 / var(--tw-bg-opacity));
 }
 
 .p-3 {
   padding: 0.75rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.p-5 {
+  padding: 1.25rem;
 }
 
 .py-10 {
@@ -754,10 +832,6 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.pb-3 {
-  padding-bottom: 0.75rem;
 }
 
 .pb-5 {
@@ -794,6 +868,15 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -839,12 +922,25 @@ video {
   font-weight: 500;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.leading-5 {
+  line-height: 1.25rem;
+}
+
 .leading-7 {
   line-height: 1.75rem;
 }
 
-.leading-\[20px\] {
-  line-height: 20px;
+.text-\[\#2E2937\] {
+  --tw-text-opacity: 1;
+  color: rgb(46 41 55 / var(--tw-text-opacity));
 }
 
 .text-\[\#303030\] {
@@ -852,33 +948,14 @@ video {
   color: rgb(48 48 48 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#D8DbF6\] {
-  --tw-text-opacity: 1;
-  color: rgb(216 219 246 / var(--tw-text-opacity));
-}
-
-.text-\[\#\] {
-  color: #;
-}
-
-.text-\[\#\#F58220\] {
-  color: ##F58220;
-}
-
 .text-\[\#F58220\] {
   --tw-text-opacity: 1;
   color: rgb(245 130 32 / var(--tw-text-opacity));
 }
 
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 body {
@@ -927,6 +1004,22 @@ body {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   --tw-content: '';
   content: var(--tw-content);
+}
+
+.lang_items {
+  position: absolute;
+  z-index: 10;
+  min-width: 80px;
+  max-width: 100px;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 0.75rem;
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .form_control {
@@ -1025,7 +1118,7 @@ body {
 }
 
 .section_title {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   font-weight: 600;
   line-height: 2rem;
   --tw-text-opacity: 1;
@@ -1072,18 +1165,61 @@ body {
   padding-left: 2rem;
 }
 
+.absolute_img {
+  position: absolute;
+  bottom: 0.5rem;
+  height: 210px;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .absolute_img {
+    height: 150px;
+  }
+}
+
+.absolute_img.small_img {
+  height: 260px;
+  max-width: 250px;
+}
+
 .even\:mt-9:nth-child(even) {
   margin-top: 2.25rem;
 }
 
+.hover\:bg-\[\#FFB805\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 184 5 / var(--tw-bg-opacity));
+}
+
 @media (min-width: 768px) {
+  .md\:h-\[310px\] {
+    height: 310px;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:even\:mt-9:nth-child(even) {
     margin-top: 2.25rem;
   }
 }
 
 @media (min-width: 1024px) {
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:h-full {
+    height: 100%;
+  }
+
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
