--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -624,16 +624,16 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
+.mb-9 {
+  margin-bottom: 2.25rem;
 }
 
 .block {
@@ -875,6 +875,10 @@ video {
 
 .pb-8 {
   padding-bottom: 2rem;
+}
+
+.pb-9 {
+  padding-bottom: 2.25rem;
 }
 
 .pl-3 {
@@ -1271,14 +1275,14 @@ body {
 }
 
 .service_card {
-  min-height: 420px;
+  min-height: 370px;
   border-radius: 0.5rem;
   border-width: 1px;
   --tw-border-opacity: 1;
   border-color: rgb(245 130 32 / var(--tw-border-opacity));
   padding-top: 2rem;
   padding-bottom: 2rem;
-  padding-left: 2rem;
+  padding-left: 1rem;
 }
 
 .product_card {
