--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -614,6 +614,10 @@ video {
   z-index: 10;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -624,16 +628,24 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.mb-9 {
+  margin-bottom: 2.25rem;
 }
 
 .mt-3 {
   margin-top: 0.75rem;
 }
 
-.mb-9 {
-  margin-bottom: 2.25rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .block {
@@ -720,6 +732,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -1286,6 +1302,7 @@ body {
 }
 
 .product_card {
+  position: relative;
   overflow: hidden;
   border-radius: 0.375rem;
   border-width: 1px;
@@ -1296,6 +1313,23 @@ body {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
   text-align: center;
+}
+
+.p_badge {
+  position: absolute;
+  left: 0.75rem;
+  z-index: 10;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 130 32 / var(--tw-bg-opacity));
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .absolute_img {
@@ -1365,6 +1399,65 @@ body {
 .footer_widget li:hover {
   --tw-text-opacity: 1;
   color: rgb(255 184 5 / var(--tw-text-opacity));
+}
+
+.form_select {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(239 239 239 / var(--tw-border-opacity));
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.form_select:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.pagination_block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.pagination_link {
+  display: block;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(216 219 246 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 184 5 / var(--tw-text-opacity));
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
+}
+
+.pagination_link:hover {
+  border-color: transparent;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 184 5 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.pagination_link.active {
+  border-color: transparent;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 184 5 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .odd\:flex-row-reverse:nth-child(odd) {
