--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -648,6 +648,10 @@ video {
   margin-top: 0.75rem;
 }
 
+.ml-auto {
+  margin-left: auto;
+}
+
 .block {
   display: block;
 }
@@ -953,10 +957,6 @@ video {
   padding-top: 1rem;
 }
 
-.pt-5 {
-  padding-top: 1.25rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1035,11 +1035,6 @@ video {
   color: rgb(172 177 196 / var(--tw-text-opacity));
 }
 
-.text-\[\#AEAEAE\] {
-  --tw-text-opacity: 1;
-  color: rgb(174 174 174 / var(--tw-text-opacity));
-}
-
 .text-\[\#F58220\] {
   --tw-text-opacity: 1;
   color: rgb(245 130 32 / var(--tw-text-opacity));
@@ -1070,6 +1065,17 @@ video {
 
 body {
   font-family: 'Poppins', sans-serif;
+}
+
+.breadcrumb {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+  padding-top: 1.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(174 174 174 / var(--tw-text-opacity));
 }
 
 .overlay {
@@ -1174,16 +1180,51 @@ body {
   border-radius: 0.375rem;
   border-width: 1px;
   --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  border-color: rgb(217 217 217 / var(--tw-border-opacity));
   background-color: transparent;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(30 30 30 / var(--tw-text-opacity));
+}
+
+.form_control:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.form_control.search {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-  padding-left: 0.5rem;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.form_control:focus {
+.form_control.search::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-placeholder-opacity));
+}
+
+.form_control.search::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-placeholder-opacity));
+}
+
+.form_textarea {
+  display: block;
+  width: 100%;
+  resize: none;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(217 217 217 / var(--tw-border-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.5rem;
+}
+
+.form_textarea:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
@@ -1309,6 +1350,37 @@ body {
   background-color: rgb(245 130 32 / var(--tw-bg-opacity));
   --tw-content: '';
   content: var(--tw-content);
+}
+
+@media (min-width: 768px) {
+  .section_title.line_after::before {
+    position: absolute;
+    left: -45px;
+    top: 50%;
+    height: 0.125rem;
+    width: 2rem;
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 184 5 / var(--tw-bg-opacity));
+    --tw-content: '';
+    content: var(--tw-content);
+  }
+
+  .section_title.line_after::after {
+    position: absolute;
+    right: -45px;
+    top: 50%;
+    height: 0.125rem;
+    width: 2rem;
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 184 5 / var(--tw-bg-opacity));
+    --tw-content: '';
+    content: var(--tw-content);
+  }
+}
+
+.text-main {
+  --tw-text-opacity: 1;
+  color: rgb(245 130 32 / var(--tw-text-opacity));
 }
 
 .bg_section {
@@ -1509,6 +1581,19 @@ body {
   border-color: transparent;
   --tw-bg-opacity: 1;
   background-color: rgb(255 184 5 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.btn_main {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 130 32 / var(--tw-bg-opacity));
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
