--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -27,11 +27,11 @@ body {
 }
 
 .navbar {
-    @apply bg-white absolute lg:static w-full lg:w-auto flex flex-col lg:flex-row items-center gap-5 left-0 py-2.5 lg:py-0 bottom-0 translate-y-full lg:translate-y-0 z-10 lg:translate-x-0 transition duration-500
+    @apply bg-white absolute lg:static w-full lg:w-auto flex flex-col lg:flex-row items-center gap-5 left-0 py-2.5 lg:py-0 bottom-0 translate-y-full lg:translate-y-0 z-10 lg:translate-x-0 transition duration-500 shadow-md lg:shadow-none
 }
 
 .lang_items {
-    @apply absolute min-w-[80px] max-w-[100px] rounded-md bg-white shadow-2xl px-4 pb-3 z-10
+    @apply absolute min-w-[80px] max-w-[100px] rounded-md bg-white shadow-xl z-10
 }
 
 .form_control {
